// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Radio has a helptext 1`] = `
<div class="react-component-adapter">
  <div class="form-group" data-field-name="radioField">
    <div class="ddm-radio">
      <div class="custom-control custom-radio"><label><input name="radioField" class="custom-control-input" role="radio" type="radio" value="" checked=""><span class="custom-control-label"><span class="custom-control-label-text">Option 1</span></span></label></div>
      <div class="custom-control custom-radio"><label><input name="radioField" class="custom-control-input" role="radio" type="radio" value="" checked=""><span class="custom-control-label"><span class="custom-control-label-text">Option 2</span></span></label></div>
    </div><span class="form-text">Type something</span>
  </div>
</div>
`;

exports[`Field Radio has a label 1`] = `
<div class="react-component-adapter">
  <div class="form-group" data-field-name="radioField">
    <p class="ddm-label">label</p>
    <div class="ddm-radio">
      <div class="custom-control custom-radio"><label><input name="radioField" class="custom-control-input" role="radio" type="radio" value="" checked=""><span class="custom-control-label"><span class="custom-control-label-text">Option 1</span></span></label></div>
      <div class="custom-control custom-radio"><label><input name="radioField" class="custom-control-input" role="radio" type="radio" value="" checked=""><span class="custom-control-label"><span class="custom-control-label-text">Option 2</span></span></label></div>
    </div>
  </div>
</div>
`;

exports[`Field Radio has a predefined Value 1`] = `
<div class="react-component-adapter">
  <div class="form-group" data-field-name="radioField">
    <div class="ddm-radio">
      <div class="custom-control custom-radio"><label><input name="radioField" class="custom-control-input" role="radio" type="radio" value="" checked=""><span class="custom-control-label"><span class="custom-control-label-text">Option 1</span></span></label></div>
      <div class="custom-control custom-radio"><label><input name="radioField" class="custom-control-input" role="radio" type="radio" value="" checked=""><span class="custom-control-label"><span class="custom-control-label-text">Option 2</span></span></label></div>
    </div>
  </div>
</div>
`;

exports[`Field Radio has a spritemap 1`] = `
<div class="react-component-adapter">
  <div class="form-group" data-field-name="radioField">
    <div class="ddm-radio">
      <div class="custom-control custom-radio"><label><input name="radioField" class="custom-control-input" role="radio" type="radio" value="" checked=""><span class="custom-control-label"><span class="custom-control-label-text">Option 1</span></span></label></div>
      <div class="custom-control custom-radio"><label><input name="radioField" class="custom-control-input" role="radio" type="radio" value="" checked=""><span class="custom-control-label"><span class="custom-control-label-text">Option 2</span></span></label></div>
    </div>
  </div>
</div>
`;

exports[`Field Radio has a value 1`] = `
<div class="react-component-adapter">
  <div class="form-group" data-field-name="radioField">
    <div class="ddm-radio">
      <div class="custom-control custom-radio"><label><input name="radioField" class="custom-control-input" role="radio" type="radio" value=""><span class="custom-control-label"><span class="custom-control-label-text">Option 1</span></span></label></div>
      <div class="custom-control custom-radio"><label><input name="radioField" class="custom-control-input" role="radio" type="radio" value=""><span class="custom-control-label"><span class="custom-control-label-text">Option 2</span></span></label></div>
    </div>
  </div>
</div>
`;

exports[`Field Radio has an id 1`] = `
<div class="react-component-adapter">
  <div class="form-group" data-field-name="radioField">
    <div class="ddm-radio">
      <div class="custom-control custom-radio"><label><input name="radioField" class="custom-control-input" role="radio" type="radio" value="" checked=""><span class="custom-control-label"><span class="custom-control-label-text">Option 1</span></span></label></div>
      <div class="custom-control custom-radio"><label><input name="radioField" class="custom-control-input" role="radio" type="radio" value="" checked=""><span class="custom-control-label"><span class="custom-control-label-text">Option 2</span></span></label></div>
    </div>
  </div>
</div>
`;

exports[`Field Radio is not edidable 1`] = `
<div class="react-component-adapter">
  <div class="form-group" data-field-name="radioField">
    <div class="ddm-radio">
      <div class="custom-control custom-radio"><label><input name="radioField" class="custom-control-input" role="radio" type="radio" value="" checked=""><span class="custom-control-label"><span class="custom-control-label-text">Option 1</span></span></label></div>
      <div class="custom-control custom-radio"><label><input name="radioField" class="custom-control-input" role="radio" type="radio" value="" checked=""><span class="custom-control-label"><span class="custom-control-label-text">Option 2</span></span></label></div>
    </div>
  </div>
</div>
`;

exports[`Field Radio is not required 1`] = `
<div class="react-component-adapter">
  <div class="form-group" data-field-name="radioField">
    <div class="ddm-radio">
      <div class="custom-control custom-radio"><label><input name="radioField" class="custom-control-input" role="radio" type="radio" value="" checked=""><span class="custom-control-label"><span class="custom-control-label-text">Option 1</span></span></label></div>
      <div class="custom-control custom-radio"><label><input name="radioField" class="custom-control-input" role="radio" type="radio" value="" checked=""><span class="custom-control-label"><span class="custom-control-label-text">Option 2</span></span></label></div>
    </div>
  </div>
</div>
`;

exports[`Field Radio renders Label if showLabel is true 1`] = `
<div class="react-component-adapter">
  <div class="form-group" data-field-name="radioField">
    <p class="ddm-label">text</p>
    <div class="ddm-radio">
      <div class="custom-control custom-radio"><label><input name="radioField" class="custom-control-input" role="radio" type="radio" value="" checked=""><span class="custom-control-label"><span class="custom-control-label-text">Option 1</span></span></label></div>
      <div class="custom-control custom-radio"><label><input name="radioField" class="custom-control-input" role="radio" type="radio" value="" checked=""><span class="custom-control-label"><span class="custom-control-label-text">Option 2</span></span></label></div>
    </div>
  </div>
</div>
`;

exports[`Field Radio renders no options when options is empty 1`] = `
<div class="react-component-adapter">
  <div class="form-group" data-field-name="radioField">
    <div class="ddm-radio"></div>
  </div>
</div>
`;

exports[`Field Radio renders options 1`] = `
<div class="react-component-adapter">
  <div class="form-group" data-field-name="radioField">
    <div class="ddm-radio">
      <div class="custom-control custom-radio"><label><input name="radioField" class="custom-control-input" role="radio" type="radio" value="item"><span class="custom-control-label"><span class="custom-control-label-text">label</span></span></label></div>
      <div class="custom-control custom-radio"><label><input name="radioField" class="custom-control-input" role="radio" type="radio" value="item"><span class="custom-control-label"><span class="custom-control-label-text">label2</span></span></label></div>
    </div>
  </div>
</div>
`;
